--- a/src/main/resources/assets/auk_t1/lang/en_us.json
+++ b/src/main/resources/assets/auk_t1/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.auk_t1.gold_p_item": "Gold P",
   "item.auk_t1.silver_p_item": "Silver P",
   "item.auk_t1.funkle_drew": "Funkle Drew",
+  "item.auk_t1.chainsaw": "Chainsaw",
 
   "block.aukt1.gold_p_block": "Gold P Block'",
 
